--- a/prometheus.yml
+++ b/prometheus.yml
@@ -1,7 +1,7 @@
 global:
-  scrape_interval: 15s  # Intervalo para coleta das métricas
+  scrape_interval: 15s 
 
 scrape_configs:
   - job_name: 'prometheus'
     static_configs:
-      - targets: ['localhost:9090']  # Prometheus vai coletar métricas de si mesmo
+      - targets: ['localhost:9090']
