--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -37,7 +37,7 @@ services:
     ports:
       - "9090:9090"
     volumes:
-      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+      - ./internal/infra/config/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
 
   app:
     build:
