--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,12 +25,16 @@ services:
 
   grafana:
     image: grafana/grafana:latest
+    container_name: grafana
     ports:
       - "3000:3000"
     depends_on:
       - prometheus
+      - loki
     volumes:
       - grafana-data:/var/lib/grafana
+    environment:
+      GF_SECURITY_ADMIN_PASSWORD: "admin"
 
   prometheus:
     image: prom/prometheus:latest
@@ -38,6 +42,25 @@ services:
       - "9090:9090"
     volumes:
       - ./internal/infra/config/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+
+  loki:
+    image: grafana/loki:latest
+    container_name: loki
+    ports:
+      - "3100:3100"
+    volumes:
+      - ./internal/infra/config/loki-config:/etc/loki
+    command: -config.file=/etc/loki/loki-config.yaml
+
+  promtail:
+    image: grafana/promtail:latest
+    container_name: promtail
+    volumes:
+      - /var/log:/var/log
+      - ./internal/infra/config/loki-config/promtail-config.yaml:/etc/promtail/config.yaml
+    command: -config.file=/etc/promtail/config.yaml
+    depends_on:
+      - loki
 
   app:
     build:
@@ -49,7 +72,12 @@ services:
       - prometheus
       - postgres
     environment:
-      DATABASE_URL: postgres://docker:docker@postgres-db:5432/docker 
+      DATABASE_URL: postgres://docker:docker@postgres-db:5432/docker
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
 volumes:
   grafana-data:
