--- a/internal/infra/config/loki-config/loki-config.yaml
+++ b/internal/infra/config/loki-config/loki-config.yaml
@@ -1,32 +1,36 @@
 auth_enabled: false
 
+limits_config:
+  allow_structured_metadata: true
+  volume_enabled: true
+
 server:
   http_listen_port: 3100
 
-ingester:
-  wal:
-    dir: /loki/wal
-  chunk_target_size: 1048576
+common:
+  ring:
+    instance_addr: 0.0.0.0
+    kvstore:
+      store: inmemory
+  replication_factor: 1
+  path_prefix: /tmp/loki
 
-distributor:
-  shard_by_all_labels: true
-
-query_range:
-  results_cache:
-    cache:
-      enabled: true
-  max_retries: 5
-  batch_size: 100
-
-table_manager:
-  retention_deletes_enabled: false
-  retention_period: 7d
-
-frontend:
-  compress_responses: true
+schema_config:
+  configs:
+  - from: 2020-05-15
+    store: tsdb
+    object_store: filesystem
+    schema: v13
+    index:
+      prefix: index_
+      period: 24h
 
 storage_config:
-  boltdb_shipper:
-    directory: /loki/index
-    index_duration: 168h
-    retention_duration: 336h
+  tsdb_shipper:
+    active_index_directory: /tmp/loki/index
+    cache_location: /tmp/loki/index_cache
+  filesystem:
+    directory: /tmp/loki/chunks
+
+pattern_ingester:
+  enabled: true
