--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -72,7 +72,12 @@ services:
       - prometheus
       - postgres
     environment:
-      DATABASE_URL: postgres://docker:docker@postgres-db:5432/docker
+      USER_DATABASE: "docker"               
+      USER_PASSWORD: "docker"              
+      DATABASE: "docker"                  
+      HOST: "localhost"                    
+      PORT: "5432"                          
+      DATABASE_URL: "postgres://docker:docker@postgres-db:5432/docker" 
     logging:
       driver: "json-file"
       options:
