--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -2,11 +2,11 @@ name: Deploy
 
 on:
   push:
-    branches: ["main"]
+    branches: [ main, dev]
     paths-ignore:
       - '**/*.md'
   pull_request:
-    branches: ["main"]
+    branches: [ main, dev] 
     paths-ignore:
       - '**/*.md'
 
