--- a/configs/config.json
+++ b/configs/config.json
@@ -7,9 +7,9 @@
     "logging_enabled": true,
     "database": {
         "port": "5432",
-        "user": "",
-        "password": "",
-        "database": "",
-        "host": ""
+        "user": "docker",
+        "password": "docker",
+        "database": "docker",
+        "host": "localhost"
     }
 }
